# Haskell-Programming-from-First-Principles

./: README.md
Abstraction/: 1All you need is lamda.pptx  6TypeClass.pptx
Chapter1/: Excerise.txt
Chapter10/: Database_Processing.hs  Excersie.hs  Fold.hs  Scans.hs  Understanding_Folds.hs  fold_func.hs
Chapter11/: Binary_Tree.hs  Con_Destructor.hs  Data_Cons_Values.lhs  Doggie.hs  Excersie.hs  Garden.hs  NewType.hs  PityTheBool.hs  Vehicle.hs  Vigenere_Chiper.hs
Chapter12/: Chapter_Excersie.hs  Maybe_type.hs
Chapter13/: Excersie.hs  Palindrome.hs  Person.hs
Chapter13/hangman/: hangman.cabal
Chapter13/hangman/.stack-work/: stack.sqlite3
Chapter13/hangman/src/: Main.hs
Chapter14/Arbitrary/arbitrary/: arbitrary.cabal  package.yaml
Chapter14/Arbitrary/arbitrary/app/: Main.hs
Chapter14/WordToNumberTest/: ChangeLog.md  README.md  WordToNumberTest.cabal  package.yaml
Chapter14/WordToNumberTest/app/: WordToNumber.hs
Chapter14/WordToNumberTest/test/: Spec.hs
Chapter14/addition/: Addition.hs  Mysum.hs  addition.cabal
Chapter14/addition/.stack-work/: stack.sqlite3
Chapter14/addition/.stack-work/ghci/149c2010/: cabal_macros.h
Chapter14/addition/.stack-work/ghci/9dcffa79/: cabal_macros.h
Chapter14/addition/.stack-work/install/30ba7c82/lib/x86_64-windows-ghc-9.0.2/addition-0.1.0.0-1XvV9RqSVYU8aCW2o8w6wS/: Addition.hi
Chapter14/addition/.stack-work/install/30ba7c82/pkgdb/: addition-0.1.0.0-3zmc8UiIMON6lqN4GunWo2.conf  package.cache
Chapter14/morse/: morse.cabal  package.yaml
Chapter14/morse/app/: Main.hs
Chapter14/morse/src/: Morse.hs
Chapter14/morse/test/: Spec.hs
Chapter2/: Excercise.hs
Chapter3/: Building_Functions.hs  Excercise.hs  Print2.hs  Print3.hs  Print3flipped.hs  Reverse.hs  ToporLocal.hs
Chapter4/: Excercise.hs  Mood.hs  greetIfCool.hs
Chapter5/: Arith3Broken.hs  Curring.hs  Excercise.hs  TypeInterference1.hs  TypeInterference2.hs  sing.hs
Chapter6/: DayofWeek.hs  EqInstance.hs  Excersie.hs  Numberish.hs  OrdInstance.hs  WritingTypeclassInstance.hs
Chapter7/: CaseExpersion.hs  CasePratice.hs  Chapter_Excersie.hs  Employee.hs  Excercise.hs  Guard_Duty.hs  Guards.hs  RegisteredUser.hs  WherePenguinelives.hs  arith2.hs  greatIfCool.hs  matchingTuples.hs
Chapter8/: Excersie.hs  Factorial.hs  Fibonacci_sequence.hs  Integral_Division.hs  word_number.hs
Chapter9/: Bottom_Madness.hs  Chiper.hs  EnumFromTo.hs  Excersie.hs  Fearfull_Symmetry.hs  Filter.hs  Pattern_match.hs  Poem_Lines.hs  Square_Cube.hs  Zipping.hs  myfunction.hs
