cabal-version: 1.12

name:           morse
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/morse#readme>
homepage:       https://github.com/githubuser/morse#readme
bug-reports:    https://github.com/githubuser/morse/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md


library
  exposed-modules:
      Morse
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      containers,
      QuickCheck
  default-language: Haskell2010

executable morse-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , morse
    , containers
    , QuickCheck
  default-language: Haskell2010

test-suite morse-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_morse
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , morse
    , containers
    , QuickCheck
  default-language: Haskell2010
